--- a/workshop/Docker101/Dockerfile/index.html
+++ b/workshop/Docker101/Dockerfile/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Docker NGINX Tutorial</title>
+    <title>sangam</title>
   </head>
   <body>
     <h1>Join CloudNativeFolks Community</h1>
